# ocaml-bls12-381

./: .gitignore  .gitlab-ci.yml  .ocamlformat  CHANGES.md  README.md  bls12-381-js-gen.opam  bls12-381-js.opam  bls12-381-legacy.opam  bls12-381-unix-blst.opam  bls12-381-unix.opam  bls12-381.opam  package.json
.ci/: check_blst_version.sh  package-lock.json
.ci/js/: .eslintrc.js  package-lock.json
.github/workflows/: build-blst-on-macos.yml
_ci/: check_blst_version.sh
_ci/js/: package-lock.json
benchmark/: bench_anemoi.ml  bench_ec.ml  bench_fft.ml  bench_fft_g1.ml  bench_fft_g2.ml  bench_fft_great_domain.ml  bench_fq12.ml  bench_fr.ml  bench_g1.ml  bench_g1_bulk.ml  bench_g1_pippenger.ml  bench_g2.ml  bench_g2_bulk.ml  bench_hades.ml  bench_pairing.ml  bench_pairing_slow.ml  bench_poseidon.ml  bench_poseidon128.ml  bench_rescue.ml  bench_signature.ml  dune
benchmark/blst/: README.md  bench_fr.c
common/: fft.ml  fft.mli
src/: anemoi.ml  bls12_381.ml  bls12_381.mli  build_blst.sh  dune  fq12.ml  fr.ml  g1.ml  g2.ml  gen_wasm_needed_names.ml  gt.ml  hades.ml  needed-wasm-names  pairing.ml  poseidon.ml  poseidon128.ml  poseidon_utils.ml  rescue.ml  runtime_helper.js  signature.ml
src/bindings/: blst_bindings_stubs.c  blst_bindings_stubs.js  blst_extended.c  blst_extended.h  blst_misc.h  blst_wrapper.c  caml_bls12_381_stubs.h
src/blst/: bench_fr.ml  bench_g1.ml  bls12_381.ml  build_blst.sh  dune  fq.ml  fq12.ml  fq2.ml  fr.ml  g1.ml  g2.ml  pairing.ml  poseidon128.ml  rescue.ml  signature.ml
src/blst/bindings/: blst_bindings.ml  blst_bindings_stubs.c  blst_fr_misc.h  blst_gen.ml  blst_misc.h  blst_wrapper.c  caml_bls12_381_stubs.h  dune
src/blst/primitives/: caml_poseidon128_stubs.c  poseidon128.c  poseidon128.h
src/blst/primitives/fft/: caml_fft_stubs.c  fft.c  fft.h
src/blst/primitives/poseidon128/: ark_128.h  caml_poseidon128_stubs.c  mds_128.h  poseidon128.c  poseidon128.h
src/blst/primitives/rescue/: caml_rescue_stubs.c  rescue.c
src/js/: g1.ml  g2.ml
src/js-gen/: fq12.ml  fr.ml  g1.ml  g2.ml
src/legacy/: dune
src/libblst/bindings/: blst.h
src/libblst/src/: consts.c  consts.h  exports.c  multi_scalar.c
src/primitives/anemoi/: anemoi.c  anemoi.h  caml_anemoi_stubs.c
src/primitives/fft/: caml_fft_stubs.js  fft.c  fft.h
src/primitives/hades/: caml_hades_stubs.c  hades.c  hades.h
src/primitives/poseidon/: caml_poseidon_stubs.c  poseidon.c  poseidon.h
src/primitives/poseidon128/: caml_poseidon128_stubs.c  caml_poseidon128_stubs.js  poseidon128.c  poseidon128.h
src/primitives/rescue/: caml_rescue_stubs.js  rescue.c  rescue.h
src/rust/: dune  fq12.ml  fr.ml
src/unix/: dune  fq12.ml  fr.ml  g1.ml  g2.ml
src/unix/bindings/: rustc_bls12_381_bindings.ml
src/virtual/: bls12_381.mli  dune
test/: check_memleak_signature.ml  dune  poseidon128_mds.ml  poseidon252_ark.ml  poseidon252_mds.ml  preload.js  test_aggregated_signature.ml  test_anemoi.ml  test_ec_make.ml  test_fq12.ml  test_fr.ml  test_fr_montgomery.ml  test_g1.ml  test_g1_fft.ml  test_g2.ml  test_g2_fft.ml  test_gt.ml  test_hades.ml  test_hash_to_curve.ml  test_pairing.ml  test_poseidon.ml  test_poseidon128.ml  test_rescue.ml  test_signature.ml  try_fft.ml  utils.ml
test/blst/: ark128.ml  dune  mds128.ml  rescue_ark.ml  rescue_mds.ml  test_aggregated_signature.ml  test_g1_fft.ml  test_g2_fft.ml  test_hash_to_curve.ml  test_poseidon128.ml  test_rescue.ml  test_signature.ml
test/js-gen/: dune  test_g1.ml  test_g2.ml
test/js/browser/: dune
test/js/node/: dune
test/legacy/: dune  test_fq12.ml  test_fr.ml  test_g1.ml  test_g2.ml  test_pairing.ml
test/rust/: dune
test/unix/: dune  test_g1_fft.ml  test_g2_fft.ml
utils/: dune  generate_fr_test_vectors.ml  generate_g1_test_vectors.ml  generate_test_vectors_from_bls_sigs_ref_for_blst.ml  run_poseidon.ml
