opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Implementation of BLS12-381 and some cryptographic primitives built
on top of it"
homepage: "https://gitlab.com/dannywillems/ocaml-bls12-381"
dev-repo: "git+https://gitlab.com/dannywillems/ocaml-bls12-381.git"
bug-reports: "https://gitlab.com/dannywillems/ocaml-bls12-381/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.8.4"}
  "ff-sig" {>= "0.6.1" & < "0.7.0"}
  "zarith" {>= "1.10" & < "2.0"}
  "zarith_stubs_js" {with-test}
  "hex" {>= "1.3.0"}
  "alcotest" {with-test}
  "integers"
  "integers_stubs_js" {with-test}
  "bisect_ppx" {with-test & >= "2.5"}
  "ff-pbt" {>= "0.6.0" & < "0.7.0" & with-test}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
available: arch != "ppc64" & arch != "arm32" & arch != "x86_32"
x-ci-accept-failures: [
  # because of -Werror
  "centos-7"
  "oraclelinux-7"
]
