(executable
 (name bench_g1)
 (modules bench_g1)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_g1_bulk)
 (modules bench_g1_bulk)
 (libraries bls12-381-unix))

; (executable
;  (name bench_g1_pippenger)
;  (modules bench_g1_pippenger)
;  (libraries bls12-381-unix domainslib))

(executable
 (name bench_g2_bulk)
 (modules bench_g2_bulk)
 (libraries bls12-381-unix))

(executable
 (name bench_fq12)
 (modules bench_fq12)
 (libraries core_bench bls12-381-unix))

(executable
 (name bench_fr_bulk)
 (modules bench_fr_bulk)
 (libraries bls12-381-unix))

(executable
 (name bench_g2)
 (modules bench_g2)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_fr)
 (modules bench_fr)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_pairing)
 (modules bench_pairing)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_pairing_slow)
 (modules bench_pairing_slow)
 (libraries bls12-381-unix))

(executable
 (name bench_signature)
 (modules bench_signature)
 (libraries bls12-381-unix core core_bench))

(copy_files ../test/blst/{*128*.ml})

(executable
 (name bench_poseidon128)
 (modules bench_poseidon128 ark128 mds128)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_fft)
 (modules bench_fft)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_fft_g1)
 (modules bench_fft_g1)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_fft_g2)
 (modules bench_fft_g2)
 (libraries bls12-381-unix core core_bench))

(executable
 (name bench_fft_great_domain)
 (modules bench_fft_great_domain)
 (libraries bls12-381-unix))
