; (executable
;  (name bench_g1_pippenger)
;  (modules bench_g1_pippenger)
;  (libraries bls12-381 domainslib))

(executables
 (names bench_g1 bench_g1_bulk bench_g2 bench_g2_bulk bench_fr bench_fr_bulk
   bench_fq12 bench_pairing bench_pairing_slow bench_fft bench_fft_g1
   bench_fft_g2 bench_fft_great_domain)
 (libraries bls12-381 core core_bench))
