(copy_files ../common/{fft.ml,fft.mli})

(copy_files
  primitives/poseidon128/{caml_poseidon128_stubs.c,caml_poseidon128_stubs.js,poseidon128.h,poseidon128.c})

(copy_files
  primitives/poseidon/{caml_poseidon_stubs.c,caml_poseidon_stubs.js,poseidon.h,poseidon.c})

(copy_files
  primitives/rescue/{caml_rescue_stubs.c,caml_rescue_stubs.js,rescue.h,rescue.c})

(copy_files primitives/fft/{fft.c,fft.h,caml_fft_stubs.c,caml_fft_stubs.js})

(copy_files bindings/{blst_bindings_stubs.c,blst_bindings_stubs.js})

(copy_files bindings/{blst.c,blst_wrapper.c})

(copy_files bindings/blst_misc.h)

(copy_files bindings/caml_bls12_381_stubs.h)

(copy_files libblst/bindings/blst.h)

(copy_files libblst/bindings/blst_aux.h)

(data_only_dirs libblst)

(rule
 (deps
  (source_tree libblst)
  build_blst.sh)
 (targets libblst.a dllblst.so c_flags_blst.sexp)
 (action
  (no-infer
   (progn
    (run ./build_blst.sh)
    (run cp libblst/libblst.a libblst.a)
    (with-accepted-exit-codes
     (or 0 1)
     (run cp libblst/libblst.so dllblst.so))
    (with-accepted-exit-codes
     (or 0 1)
     (run cp libblst/libblst.dylib dllblst.so))))))

(rule
 (deps
  (source_tree libblst)
  needed-wasm-names
  (glob_files *.h))
 (targets blst.wasm blst.js)
 (action
  (run emcc -Os -o blst.js -I libblst/src/ libblst/src/server.c
    %{dep:blst_wrapper.c} %{dep:poseidon128.c} %{dep:rescue.c}
    -DENABLE_EMSCRIPTEN_STUBS -DENABLE_MODULE_RECOVERY -s
    ALLOW_MEMORY_GROWTH=1 -s WASM=1 -s MALLOC=emmalloc -s EXPORT_ES6=0 -s
    FILESYSTEM=0 -s MODULARIZE=1 -s EXPORT_NAME='_BLS12381' -s
    EXPORTED_FUNCTIONS=@needed-wasm-names --no-entry)))

(library
 (public_name bls12-381)
 (name bls12_381)
 (modules
  bls12_381
  fr
  fq12
  g1
  g2
  gt
  pairing
  signature
  ;; private
  fq
  fq2
  fft
  poseidon128
  poseidon
  poseidon_utils
  rescue)
 (instrumentation
  (backend bisect_ppx))
 (private_modules fq fq2 fft)
 (libraries ff-sig hex integers integers_stubs_js zarith zarith_stubs_js)
 (library_flags :standard -linkall -ccopt -lpthread)
 (foreign_archives blst)
 (js_of_ocaml
  (javascript_files runtime_helper.js blst_bindings_stubs.js
    caml_poseidon128_stubs.js caml_rescue_stubs.js caml_fft_stubs.js))
 (foreign_stubs
  (language c)
  ;; For pippenger binding, avoid warnings related to const usage
  (flags
   (:include c_flags_blst.sexp))
  (names blst_wrapper blst_bindings_stubs caml_poseidon128_stubs poseidon128
    poseidon caml_poseidon_stubs rescue caml_rescue_stubs fft caml_fft_stubs)))

(executable
 (name gen_wasm_needed_names)
 (modules gen_wasm_needed_names)
 (libraries re))

(rule
 (target needed-wasm-names)
 (mode promote)
 (deps
  (:files blst_bindings_stubs.js caml_poseidon128_stubs.js
    caml_rescue_stubs.js caml_fft_stubs.js))
 (action
  (with-outputs-to
   %{target}
   (run ./gen_wasm_needed_names.exe %{files}))))

(install
 (files libblst/bindings/blst.h libblst/bindings/blst_aux.h
   bindings/blst_misc.h bindings/caml_bls12_381_stubs.h)
 (section lib)
 (package bls12-381))
