(tests
 (names test_fr test_g1 test_g1_fft test_g2 test_g2_fft test_pairing
   test_random_state test_hash_to_curve test_fq12 test_gt test_fr_montgomery)
 (modules test_fr test_g1 test_g1_fft test_g2 test_g2_fft test_pairing
   test_ec_make test_random_state test_hash_to_curve utils test_fq12 test_gt
   test_fr_montgomery)
 (package bls12-381)
 (modes native js)
 (deps
  (source_tree test_vectors))
 (libraries bls12-381 alcotest ff-pbt hex integers_stubs_js zarith_stubs_js))

(copy_files ../src/blst.js)

(copy_files ../src/blst.wasm)

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_fr.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_g1.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_g1_fft.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_g2.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_g2_fft.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_pairing.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_random_state.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_hash_to_curve.bc.js))
 (action
  (run node -- preload.js %{test})))

;; needs dep

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_fq12.bc.js))
 (action
  (run node -- preload.js %{test})))

(rule
 (alias runtest-js)
 (deps
  (source_tree test_vectors)
  preload.js
  blst.js
  blst.wasm
  (:test test_gt.bc.js))
 (action
  (run node -- preload.js %{test})))

(executable
 (name check_built_blst_portable_set)
 (libraries bls12-381)
 (modules check_built_blst_portable_set))

(executable
 (name check_built_blst_portable_not_set)
 (libraries bls12-381)
 (modules check_built_blst_portable_not_set))
