(copy_files bindings/{rustc_bls12_381_ctypes_c_stubs.c,rustc_bls12_381_stubs.ml,rustc_bls12_381_bindings.ml})

(library
 (public_name bls12-381-legacy)
 (name bls12_381_legacy)
 (modules bls12_381 fr g1 g2 pairing fq12 rustc_bls12_381_stubs rustc_bls12_381_bindings)
 (instrumentation (backend bisect_ppx))
 (private_modules Rustc_bls12_381_stubs Rustc_bls12_381_bindings)
 (libraries zarith ctypes bls12-381-gen)
 (library_flags :standard -linkall -ccopt -pthread)
 (foreign_stubs
  (language c)
  (names rustc_bls12_381_ctypes_c_stubs)
  (flags (-I%{env:OPAM_SWITCH_PREFIX=}/lib/tezos-rust-libs))
 )
 (c_library_flags (-L%{env:OPAM_SWITCH_PREFIX=}/lib/tezos-rust-libs -lrustc_bls12_381 -lpthread))
)
